--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   <!-- 以下3项参数与log4j的配置相关 -->
   <context-param>
     <param-name>log4jConfigLocation</param-name>
-    <param-value>/WEB-INF/conf/log4j.properties</param-value>
+    <param-value>classpath:conf/log4j.properties</param-value>
   </context-param>
   <context-param>
     <param-name>log4jRefreshInterval</param-name>
