--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -13,6 +13,6 @@ log4j.appender.File.File = ../logs/ssm.log
 #\u5B9A\u4E49\u6587\u4EF6\u6700\u5927\u5927\u5C0F
 log4j.appender.File.MaxFileSize = 10MB
 # \u8F93\u51FA\u6240\u4EE5\u65E5\u5FD7\uFF0C\u5982\u679C\u6362\u6210DEBUG\u8868\u793A\u8F93\u51FADEBUG\u4EE5\u4E0A\u7EA7\u522B\u65E5\u5FD7
-log4j.appender.File.Threshold = DEBUG
+log4j.appender.File.Threshold = ALL
 log4j.appender.File.layout = org.apache.log4j.PatternLayout
 log4j.appender.File.layout.ConversionPattern =[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n
