--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,10 @@
   <!-- Spring和mybatis的配置文件 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:conf/spring-mybatis.xml</param-value>
+    <param-value>
+      classpath:conf/spring-mybatis-back.xml
+      classpath:conf/spring-mybatis-font.xml
+    </param-value>
   </context-param>
   <!-- 编码过滤器 -->
   <filter>
